chore: update docs, scripts, config for v1.0.0
Docs:
- README.md: updated for v1.0.0 with billing + SQLite info
- docs/ARCHITECTURE.md: SQLite layer, billing flow
- docs/DATA.md: 2977 drug count, new psych section
- docs/DEVELOPMENT.md: new build steps for iap/encrypted-storage
- docs/FEATURES.md: premium billing, responsive scaling
- docs/play-store-listing.md: updated description + pricing

Scripts:
- android-env.sh: JAVA_TOOL_OPTIONS for Gradle builds
- android-metro-clean.sh: Metro cache clean helper
- android-run-free.sh: one-shot free flavor build+install
- react-native.config.js: asset directories config

Playstore:
- checklist_publicacion.md: step-by-step publication guide
- ficha_play_store.txt: updated store listing
- generate_feature_graphic.html: feature banner generator

Android:
- gradle.properties: hermes + new arch settings
- keep.xml: asset retention rules for ProGuard
- patches/: package patches if any